k8s/prod/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tubester-api
  namespace: tubester
  labels:
    app: tubester-api
spec:
  selector:
    app: tubester-api
  ports:
    - name: http
      port: 8080
      targetPort: http
