k8s/prod/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tubester-client
  namespace: tubester
spec:
  selector:
    app: tubester-client
  ports:
    - name: http
      port: 80
      targetPort: 8080
