k8s/prod/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tubester-worker
  namespace: tubester
  labels:
    app: tubester-worker
spec:
  selector:
    app: tubester-worker
  ports:
    - name: http
      port: 8080
      targetPort: http
