k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tubester
  namespace: tubester
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: tubester.app
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tubester-api
                port:
                  number: 8080
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: tubester-api
                port:
                  number: 8080
          - path: /hangfire
            pathType: Prefix
            backend:
              service:
                name: tubester-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tubester-client
                port:
                  number: 80
